macos arm changes

--- a/meson/osx.ini
+++ b/meson/osx.ini
@@ -1,5 +1,6 @@
 [constants]
-common_args = [ '-arch', 'arm64', '-arch', 'x86_64', '-mmacosx-version-min=10.15' ]
+#common_args = [ '-arch', 'arm64', '-arch', 'x86_64', '-mmacosx-version-min=10.15' ]
+common_args = [ '-arch', 'arm64', '-mmacosx-version-min=10.15' ]
 
 [binaries]
 strip = '/usr/bin/strip'
@@ -23,4 +24,5 @@ objcpp_args = cpp_args
 objcpp_link_args = cpp_link_args
 
 [project options]
-vst2sdk = '/opt/SDKs/vstsdk2.4'
+vst2sdk = './../../opt/VST_SDK_2.4'
+element-plugins = 'enabled'
